tests/snapshots/snapshots__insert_slash_menu_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
╭ FILTERS ───────────────╮╭ ▶▮◀ /tmp/tuxedo-snapshot.txt  •  15 t╮╭ DETAIL ────────────────────────╮
│                        ││                                      ││                                │
│ PROJECTS               ││ (2)  PRIORITY A  ────────────────────││ priority  (A)                  │
│   +work             4  ││  1 ▸ (A) Finish Q2 board deck +work @││ created   2026-05-01           │
│   +health           3  ││  2   (A) Call dentist to reschedule c││ due       2026-05-06  today    │
│   +finance          2  ││ (3)  PRIORITY B  ────────────────────││ projects  +work                │
│   +home             1  ││  3   (B) Review pull requests for aut││ contexts  @laptop              │
│   +learning         1  ││  4   (B) Renew passport before summer││                                │
│   +personal         1  ││  5   (B) Draft hiring rubric for seni││ RAW                            │
│   +travel           1  ││ (2)  PRIORITY C  ────────────────────││                                │
│                        ││  6   (C) Pay quarterly estimated taxe││ (A) 2026-05-01 Finish Q2 board │
│ CONTEXTS               ││  7   (C) Order new running shoes +hea││ deck +work @laptop             │
│   @errands          4  ││ (8┌ ADD TASK ────────────────────────────┐e:2026-05-06                 │
│   @home             4  ││  8│                                      │                             │
│   @laptop           4  ││  9│  › edule team offsite +work @phone /█│                             │
│   @phone            3  ││ 10│  ok · 1 +project 1 @context          │                             │
│                        ││ 11│                                      │                             │
│                        ││ 12│  format: (A) Buy milk +shop @home due│                             │
│                        ││ 13│                                      │                             │
│                        ││ 14└──────────────────────────────────────┘                             │
│                        ││ 15    ┌──────────────────────────────────────────────────────────┐     │
│                        ││       │ ATTACH METADATA                                          │     │
│                        ││       │  Due date    when this needs doing                  /due │     │
│                        ││       │  Recurrence  repeat after completing                /rec │     │
│                        ││       │  Threshold   hide until this date                     /t │     │
│                        ││       │  Priority    A · B · C                             /prio │     │
│                        ││       │  + Project   attach to a project                   /proj │     │
│                        ││       │  @ Context   tool, place or person                  /ctx │     │
│                        ││       │                                                          │     │
│                        ││       │  ↑↓ pick · Enter insert · Esc dismiss · type to filter   │     │
╰────────────────────────╯╰───────└──────────────────────────────────────────────────────────┘─────╯
 INSERT   Enter save · Esc normal                            15 open · 2026-05-06 · tuxedo 2026.7.1
